* The python harp.import_product() function now allows HARP .pth files to be
  provided as input.

* Allow regridding using a multi-dimensional source axis-variable as input.
  e.g. convert from an 'altitude {latitude,longitude,vertical}' grid to
  a fixed 'altitude {vertical}` grid.

* Updates to product ingestions:
  - ACE-FTS: fix ingestion of ASCII formatted products
  - GOME-2 L2: added support for offline absorbing aerosol index (O3MARP)
  - EARLINET: added support for new format (removed support for old format)
  - EarthCARE: added support for AM__ACD_2B, AM__CTH_2B, BM__RAD_2B,
    BMA_FLX_2B, MSI_AOT_2A, MSI_CM__2A, and MSI_COP_2A
  - ECMWF GRIB: added support for new masterTablesVersion=30 data
  - S5P PAL L2: added support for AER_OT, CHOCHO, SIF, SO2 COBRA, and TCWV

1.18 2023-06-08
~~~~~~~~~~~~~~~

* Rename all uses of 'water vapour' to 'water vapor'.

* Added =| bitfield operater to allow filtering for the case where only some
  bits within the mask are set.

* The uncertainty propagation of *_uncertainty_random variables for the
  temporal binning operation now always assumes no correlation. For spatial
  binning the random component is removed for the area weighted average
  approach and it is propagated using no correlation for the simple binning
  based on center points.

* Added derivation for 'area {latitude,longitude}' and fixed area calculation
  where South Pole was an edge point.

* Fixed reading of string arrays in HARP Python interface.

* Updates to product ingestions:
  - ECMWF GRIB: added support for new masterTablesVersion=29 data
  - S5P L2 CLOUD: fixed qa_value ingestion for CRB (now use qa_value_crb)
  - S5P L2 SO2: added support for SO2 layer height
  - OMI L3: added support for OMHCHOd, OMNO2d, and OMSO2e

1.17 2022-12-12
~~~~~~~~~~~~~~~

* Added additional conventions for variable names related to areosol/cloud
  properties.

* Fixed issue with geographical area overlap calculation and improvided